# grain-agent

./: .env.test.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  install.sh
.github/workflows/: publish.yml  release.yml
docs/: README.md  agent-harness.md  compaction.md  config.md  context-guard.md  core-agent-loop.md  core-agent.md  core-stream.md  core-types.md  getting-started.md  harness-messages.md  harness-session.md  harness-system-prompt.md  harness-truncate.md  headless-cli.md  headless-session-discovery.md  headless-tools.md  headless-tui.md  llm-genai.md  llm-models.md  pi-compat.md  plugins-wasm.md  plugins.md  providers.md  scripting.md  session-jsonl.md  telemetry.md  testing.md
docs/zh/: README.md  agent-harness.md  compaction.md  config.md  context-guard.md  core-agent-loop.md  core-agent.md  getting-started.md  harness-messages.md  harness-session.md  harness-system-prompt.md  harness-truncate.md  headless-cli.md  headless-session-discovery.md  headless-tools.md  headless-tui.md  llm-genai.md  llm-models.md  pi-compat.md  plugins-wasm.md  plugins.md  providers.md  scripting.md  session-jsonl.md  telemetry.md  testing.md
grain-agent-core/: Cargo.toml
grain-agent-core/src/: agent.rs  agent_loop.rs  lib.rs  stream.rs  types.rs
grain-agent-core/tests/: smoke.rs  thinking_content.rs
grain-agent-harness/: Cargo.toml
grain-agent-harness/src/: agent_harness.rs  compaction.rs  context_guard.rs  escalation.rs  lib.rs  messages.rs  prefix_pin.rs  pruning.rs  retry_overflow.rs  session.rs  session_jsonl.rs  system_prompt.rs  truncate.rs
grain-agent-harness/src/repair/: mod.rs  storm.rs
grain-agent-harness/tests/: context_guard.rs  smoke.rs
grain-ai-agent-headless/: Cargo.toml
grain-ai-agent-headless/src/: cli.rs  compaction.rs  config.rs  deepseek.rs  diagnostics.rs  dynamic_tools.rs  extensions.rs  hooks.rs  lib.rs  memory.rs  migrations.rs  plugin_lock.rs  plugin_manager.rs  plugin_spec.rs  plugin_ui.rs  plugins.rs  prompt.rs  runtime.rs  semantic.rs  session.rs  session_discovery.rs  skills.rs  slash.rs  telemetry.rs  tool_names.rs  wasm_orchestration.rs  workspace.rs
grain-ai-agent-headless/src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  list.rs  mod.rs  read.rs  source_info.rs  web_fetch.rs  write.rs
grain-ai-agent-headless/tests/: live.rs  tools.rs
grain-ai-agent-tui/: Cargo.toml
grain-ai-agent-tui/src/: agent_worker.rs  anim.rs  app.rs  cli.rs  config_apply.rs  event.rs  lib.rs  md_render.rs  persist.rs  plugins.rs  run.rs  theme.rs  ui.rs
grain-deepseek-pack/: Cargo.toml
grain-deepseek-pack/src/: cache_first.rs  lib.rs  reasoning_scavenge.rs  subagent.rs
grain-llm-genai/: Cargo.toml
grain-llm-genai/src/: builder.rs  config.rs  lib.rs  oauth.rs  provider.rs  stream.rs
grain-llm-genai/src/mapping/: inbound.rs  mod.rs  outbound.rs  usage.rs
grain-llm-genai/tests/: builder.rs  inbound.rs  live.rs  outbound.rs
grain-llm-models/: Cargo.toml
grain-llm-models/data/: models-dev.json
grain-llm-models/src/: descriptor.rs  fetch.rs  lib.rs  registry.rs  snapshot.rs
grain-llm-models/tests/: embedded.rs
grain-pi-compat/: Cargo.toml
grain-pi-compat/src/: extension.rs  lib.rs  transform.rs
grain-plugin-wasm/: Cargo.toml
grain-plugin-wasm/examples/: .gitignore
grain-plugin-wasm/examples/design-code-handoff/: Cargo.toml  README.md  plugin.toml
grain-plugin-wasm/examples/design-code-handoff/src/: bindings.rs  lib.rs
grain-plugin-wasm/examples/design-code-handoff/wit/: grain-plugin.wit
grain-plugin-wasm/examples/echo-plugin/: Cargo.toml  README.md
grain-plugin-wasm/examples/echo-plugin/src/: lib.rs
grain-plugin-wasm/examples/mcp-adapter/: Cargo.toml  README.md  plugin.toml
grain-plugin-wasm/examples/mcp-adapter/src/: bindings.rs  lib.rs
grain-plugin-wasm/examples/mcp-adapter/wit/: grain-plugin.wit
grain-plugin-wasm/examples/web-search/: Cargo.toml  README.md  plugin.toml  plugin.toml.example
grain-plugin-wasm/examples/web-search/src/: lib.rs
grain-plugin-wasm/src/: lib.rs  tool.rs
grain-plugin-wasm/tests/: smoke.rs  web_search_smoke.rs
grain-script-boa/: Cargo.toml
grain-script-boa/src/: extension.rs  lib.rs  worker.rs
grain-script-rhai/: Cargo.toml
grain-script-rhai/src/: lib.rs
lazy-gagent/: Cargo.toml  plugin.toml
lazy-gagent/prompts/: about.md
lazy-gagent/scripts/: install.rhai
lazy-gagent/src/: lib.rs
scripts/: publish.sh
