[workspace]
resolver = "3"
members = [
    "grain-agent-core",
    "grain-agent-harness",
    "grain-llm-models",
    "grain-llm-genai",
    "grain-ai-agent-headless",
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tokio-util = { version = "0.7" }
uuid = { version = "1", features = ["v7"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
genai = "0.6.0-beta.20"
async-stream = "0.3"
ignore = "0.4"
regex = "1"
globset = "0.4"
clap = { version = "4", features = ["derive"] }
rig-core = { version = "0.37", features = ["derive"] }
anyhow = "1"
toml = "0.8"
dirs = "5"
url = "2"
grain-agent-core = { path = "grain-agent-core" }
grain-agent-harness = { path = "grain-agent-harness" }
grain-llm-models = { path = "grain-llm-models" }
grain-llm-genai = { path = "grain-llm-genai" }
grain-ai-agent-headless = { path = "grain-ai-agent-headless" }
