[workspace]
resolver = "3"
members = [
    "grain-agent-core",
    "grain-agent-harness",
    "grain-llm-models",
    "grain-llm-genai",
    "grain-ai-agent-headless",
    "grain-ai-agent-tui",
    "grain-script-boa",
    "grain-pi-compat",
    "grain-deepseek-pack",
    "lazy-gagent",
    "grain-script-rhai",
    "grain-plugin-wasm",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/grainbook/grain-agent"
homepage = "https://github.com/grainbook/grain-agent#readme"
documentation = "https://github.com/grainbook/grain-agent"
authors = ["grain-ai"]

[workspace.dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "macros", "time", "net", "io-util"] }
tokio-util = { version = "0.7" }
uuid = { version = "1", features = ["v7"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
reqwest13 = { package = "reqwest", version = "0.13", features = ["json", "stream", "gzip", "form"] }
genai = "0.6.0-beta.20"
async-stream = "0.3"
ignore = "0.4"
regex = "1"
globset = "0.4"
clap = { version = "4", features = ["derive"] }
rig-core = { version = "0.37", features = ["derive"] }
anyhow = "1"
toml = "0.8"
dirs = "5"
url = "2"
dotenvy = "0.15"
grain-agent-core = { version = "0.0.1-beta2", path = "grain-agent-core" }
grain-agent-harness = { version = "0.0.1-beta2", path = "grain-agent-harness" }
grain-llm-models = { version = "0.0.1-beta2", path = "grain-llm-models" }
grain-llm-genai = { version = "0.0.1-beta2", path = "grain-llm-genai" }
grain-ai-agent-headless = { version = "0.0.1-beta2", path = "grain-ai-agent-headless" }
grain-ai-agent-tui = { version = "0.0.1-beta2", path = "grain-ai-agent-tui" }
grain-script-boa = { version = "0.0.1-beta2", path = "grain-script-boa" }
grain-pi-compat = { version = "0.0.1-beta2", path = "grain-pi-compat" }
grain-deepseek-pack = { version = "0.0.1-beta2", path = "grain-deepseek-pack" }
lazy-gagent = { version = "0.0.1-beta1", path = "lazy-gagent" }
grain-script-rhai = { version = "0.0.1-beta2", path = "grain-script-rhai" }
grain-plugin-wasm = { version = "0.0.1-beta2", path = "grain-plugin-wasm" }
wasmtime = { version = "40.0.4", features = ["component-model"] }
wasmtime-wasi = "40.0.4"
ratatui = { version = "0.30", features = ["crossterm_0_28"] }
tachyonfx = "0.25"
crossterm = "0.28"
unicode-width = "0.2"
boa_engine = "0.21"
rhai = { version = "1", features = ["sync"] }
notify = "6"
arboard = { version = "3", default-features = false }
textwrap = "0.16"
fs2 = "0.4"
nucleo-matcher = "0.3"
