[package]
name = "grain-agent-core"
version = "0.1.0"
edition = "2024"
description = "Rust port of @earendil-works/pi-agent-core: stateful agent framework with tool execution and event streaming."
license = "MIT"

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tokio-util = { version = "0.7" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
async-stream = "0.3"
