[package]
name = "grain-agent-harness"
version = "0.0.1-beta3"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["agent", "ai", "session", "truncation"]
categories = ["development-tools"]
readme = "../docs/README.md"
description = "Rust port of @earendil-works/pi-agent-core harness: session persistence, system-prompt assembly, truncation, custom message helpers."

[dependencies]
async-trait = { workspace = true }
fs2 = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
tokio-util = { workspace = true }
uuid = { workspace = true }
grain-agent-core = { workspace = true }
grain-llm-models = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
