[package]
name = "grain-ai-agent-headless"
version = "0.0.1-beta2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["agent", "ai", "cli", "coding-agent"]
categories = ["command-line-utilities", "development-tools"]
readme = "../docs/README.md"
description = "Headless coding-agent toolkit built on grain-agent-core + grain-agent-harness + grain-llm-genai. v1 ships the four read-only filesystem tools and a single-prompt CLI driver (`grain-headless`); write tools / shell / interactive loop / rig-backed semantic search land in follow-up PRs."

[features]
# Default to scripting + WASM plugin support on. `rig` stays opt-in
# since it pulls a much heavier dep tree. `--no-default-features`
# gets you a minimal headless binary.
default = ["scripts-boa", "wasm-plugins"]
rig = ["dep:rig", "dep:anyhow"]
# Wires the Boa-backed JS scripting layer in: registers `BoaExtension`
# when the user passes `--scripts-dir <DIR>` or drops scripts into
# `<workspace>/.grain/scripts/`. Off by default — the Boa runtime is
# ~5MB compile cost users without scripts shouldn't pay.
scripts-boa = ["dep:grain-script-boa"]
# WebAssembly Component Model plugin support. Loads `.wasm` files from
# plugins that declare a `[wasm]` block (or ship a `plugin.wasm`).
# Off by default — wasmtime adds ~15MB binary size and ~20s compile.
wasm-plugins = ["dep:grain-plugin-wasm"]

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "io-std", "rt-multi-thread", "macros", "process", "sync"] }
tokio-util = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }
globset = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
rig = { version = "0.37", default-features = false, features = ["derive"], optional = true, package = "rig-core" }
anyhow = { workspace = true, optional = true }
grain-script-boa = { workspace = true, optional = true }
grain-plugin-wasm = { workspace = true, optional = true }
grain-agent-core = { workspace = true }
grain-agent-harness = { workspace = true }
grain-deepseek-pack = { workspace = true }
grain-llm-models = { workspace = true }
grain-llm-genai = { workspace = true }
fs2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "fs", "io-util", "rt-multi-thread"] }
tempfile = "3"
dotenvy = { workspace = true }
futures = { workspace = true }

[[bin]]
name = "grain-headless"
path = "src/bin/grain_headless.rs"
