[package]
name = "grain-ai-agent-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ratatui-based terminal UI on top of grain-ai-agent-headless. Same coding-agent capabilities as `grain-headless` (read / write / bash / web / semantic-search tools, session persistence, skills, slash commands) but with a multi-pane terminal interface."

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "io-std", "rt-multi-thread", "macros", "sync"] }
tokio-util = { workspace = true }
futures = { workspace = true }
ratatui = { workspace = true, features = ["unstable-rendered-line-info"] }
crossterm = { workspace = true }
unicode-width = { workspace = true }
arboard = { workspace = true }
textwrap = { workspace = true }
grain-agent-core = { workspace = true }
grain-agent-harness = { workspace = true }
grain-llm-models = { workspace = true }
grain-llm-genai = { workspace = true }
grain-ai-agent-headless = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
grain-script-boa = { workspace = true, optional = true }
grain-script-rhai = { workspace = true, optional = true }
# Direct rhai dep so `build_rhai_bundle`'s host-fn closures can
# return `rhai::Dynamic` (e.g. `plugins_list() -> Array<Map>`).
# Activated by the `scripts-rhai` feature alongside the
# grain-script-rhai bridge.
rhai = { workspace = true, optional = true }
notify = { workspace = true, optional = true }

[features]
default = []
# Watch plugin script dirs for changes and live-reload the Rhai
# engine + agent tool catalog. Requires `scripts-rhai`. Off by
# default — adds ~150KB compile cost and one extra OS thread for
# the notify backend; users without an iterate-on-scripts workflow
# don't need it.
hot-reload = ["dep:notify", "scripts-rhai"]
# Enable JavaScript scripting through `grain-script-boa`. With this on
# the TUI accepts `--scripts-dir <PATH>` and auto-discovers
# `<workspace>/.grain/scripts/`. Off by default — Boa adds ~5MB to the
# compile.
scripts-boa = ["dep:grain-script-boa"]
# Enable Rhai scripting through `grain-script-rhai`. Picks up `.rhai`
# files from the same script directories as `scripts-boa`; both
# engines can coexist (each filters by extension). With this on, the
# TUI registers `plugins_install` / `plugins_update` / `plugins_remove`
# as host native functions so in-plugin Rhai scripts can manage other
# plugins without round-tripping through TUI slash commands.
scripts-rhai = ["dep:grain-script-rhai", "dep:rhai"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[[bin]]
name = "grain-tui"
path = "src/bin/grain_tui.rs"
