[package]
name = "grain-deepseek-pack"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "DeepSeek-specific extensions (R1 reasoning_content scavenge, subagent.done protocol) on top of grain-agent-core / grain-llm-genai."

[dependencies]
serde_json = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
