[package]
name = "grain-deepseek-pack"
version = "0.0.1-beta1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["agent", "ai", "llm", "deepseek"]
categories = ["development-tools"]
readme = "../docs/README.md"
description = "DeepSeek-specific extensions (R1 reasoning_content scavenge, subagent.done protocol) on top of grain-agent-core / grain-llm-genai."

[dependencies]
serde_json = { workspace = true }
grain-agent-core = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
