[package]
name = "grain-llm-genai"
version = "0.0.1-beta2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["agent", "ai", "llm", "genai", "chat"]
categories = ["development-tools"]
readme = "../docs/README.md"
description = "genai-backed LlmStream implementation for grain-agent. Bridges grain-agent-core's transport-agnostic agent loop to the genai crate's multi-provider chat API. PR 3a: outbound mapping only — impl LlmStream, inbound mapping, and env/quirk config land in subsequent PRs."

[dependencies]
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
genai = { workspace = true }
grain-agent-core = { workspace = true }
grain-llm-models = { workspace = true }
reqwest13 = { workspace = true }
url = { workspace = true }
sha2 = "0.10"
rand = "0.8"
open = "5"

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
futures = { workspace = true }
tempfile = "3"
