[package]
name = "grain-llm-models"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Standardized LLM model registry for grain-agent. Embeds a vendored snapshot of model metadata (context window, capabilities, pricing, thinking profile); runtime fetch from models.dev is added by a follow-up `fetch` feature."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
grain-agent-core = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
