[package]
name = "grain-llm-models"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Standardized LLM model registry for grain-agent. Embeds a vendored snapshot of model metadata (context window, capabilities, pricing, thinking profile); the `fetch` feature pulls live data from models.dev."

[features]
default = []
fetch = ["dep:reqwest", "dep:tokio"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
grain-agent-core = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[[bin]]
name = "refresh-models"
path = "src/bin/refresh_models.rs"
required-features = ["fetch"]
