[package]
name = "grain-llm-models"
version = "0.0.1-beta3"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["agent", "ai", "llm", "models", "registry"]
categories = ["development-tools", "science"]
readme = "../docs/README.md"
description = "Standardized LLM model registry for grain-agent. Embeds a vendored snapshot of model metadata (context window, capabilities, pricing, thinking profile); the `fetch` feature pulls live data from models.dev."

[features]
default = []
fetch = ["dep:reqwest", "dep:tokio"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
grain-agent-core = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[[bin]]
name = "refresh-models"
path = "src/bin/refresh_models.rs"
required-features = ["fetch"]
