[package]
name = "grain-plugin-wasm"
version = "0.0.1-beta1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["agent", "ai", "wasm", "plugin"]
categories = ["development-tools", "wasm"]
readme = "../docs/README.md"
description = "WebAssembly Component Model plugin runtime for grain. Loads `.wasm` plugins at runtime and exposes their tools through the `AgentTool` trait — no recompiling grain to add a plugin."

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-util = { workspace = true }
reqwest = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
grain-agent-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
toml = { workspace = true }
# Path-only on purpose: grain-ai-agent-headless optionally depends back on
# grain-plugin-wasm, so going through the workspace `version` field would form
# a publish-time cycle. cargo strips path-only dev-deps from the uploaded
# manifest, breaking the cycle while keeping local `cargo test` working.
grain-ai-agent-headless = { path = "../grain-ai-agent-headless" }
