[package]
name = "grain-script-rhai"
version = "0.0.1-beta2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["agent", "ai", "scripting", "rhai"]
categories = ["development-tools"]
readme = "../docs/README.md"
description = "Rhai-based scripting layer for grain-agent. Loads user `.rhai` files from disk, executes them in a shared sync-mode `rhai::Engine`, and exposes the tools they register to the agent. Sibling to `grain-script-boa` — both surfaces emit `Vec<Arc<dyn AgentTool>>` and a host crate (e.g. the TUI) can mix them however it likes."

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
tokio-util = { workspace = true }
rhai = { workspace = true }
grain-agent-core = { workspace = true }
# Same boundary policy as grain-script-boa — sits below
# `grain-ai-agent-headless` so headless can opt in without a cycle.

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
