[package]
name = "lazy-gagent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "lazy.gagent — Neovim-lazy.nvim-style plugin manager that runs ON TOP OF grain-ai-agent-headless's plugin system. Placeholder today; Phase C will add install / update / remove via the same `.grain/plugins/` mechanism it manages."

[dependencies]
grain-ai-agent-headless = { workspace = true }
