[package]
name = "lazy-gagent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "lazy.gagent — Neovim/lazy.nvim-style plugin manager built on grain-ai-agent-headless::plugins. Provides install / update / remove on top of the engine's spec-file declarative install."

[dependencies]
grain-ai-agent-headless = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
