[package]
name = "design-code-handoff"
version = "0.0.1-beta1"
edition = "2024"
description = "WASM v2 orchestration plugin that lets a designer role hand implementation work to a coder role."
license = "MIT OR Apache-2.0"

# Standalone workspace so cargo-component can build outside the parent.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.component]
package = "grain:design-code-handoff"

[package.metadata.component.target]
world = "grain-plugin-v2"
path = "wit"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
