[package]
name = "mcp-adapter"
version = "0.1.0"
edition = "2024"
description = "MCP adapter — lazy proxy tool for Model Context Protocol servers, ported from pi-mcp-adapter. Saves ~90% token overhead vs direct tool registration."
license = "MIT OR Apache-2.0"

# Standalone workspace so cargo-component can build outside the parent.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.component]
package = "grain:mcp-adapter"

[package.metadata.component.target]
world = "grain-plugin"
path = "wit"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
