[workspace]
# Standalone — this example is NOT a member of the outer grain workspace.
# Lives here only for source-tree convenience; built independently via
# `cargo component build --release` from this directory.

[package]
name = "web-search-plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.component]
package = "grain:web-search-plugin"

[package.metadata.component.target]
world = "grain-plugin"
path = "wit"

# Keep the wasm small. Inspired by typical wasm-component recipes.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
